--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.yyh'
-version '1.0-SNAPSHOT'
+version '0.0.1'
 
 sourceCompatibility = 1.8
 
@@ -18,7 +18,9 @@ dependencies {
 
 intellij {
     version '2018.3.6'
+    intellij.updateSinceUntilBuild false
 }
+
 patchPluginXml {
     changeNotes """
       Add change notes here.<br>
