--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.yyh'
-version '0.0.1'
+version '0.0.3'
 
 sourceCompatibility = 1.8
 
@@ -23,6 +23,6 @@ intellij {
 
 patchPluginXml {
     changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+    -Modified Text area class
+    """
 }
