--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,14 +1,82 @@
 <idea-plugin>
     <id>com.yyh.filter</id>
     <name>project window filter</name>
+
     <vendor email="dbtlek@gmail.com" url="https://github.com/yu-young-hoon/java-intellij-plugin-filter.git">dbtlek</vendor>
+
     <idea-version since-build="181"/>
-    <description>
-        <![CDATA[
-            This is filter and release filter action for project window.
-            Makes items invisible in the tree.
-        ]]>
-    </description>
+
+    <description><![CDATA[
+        <article class="markdown-body entry-content p-5" itemprop="text">
+            <h2>
+                project window filter
+            </h2>
+            <ul>
+                <li>This is filter and release filter action for project window.</li>
+                <li>Makes items invisible in the tree.</li>
+            </ul>
+
+            <hr>
+
+            <p>
+                <img src="https://camo.githubusercontent.com/4cbbc7c6629e8e197027a68efb9c23a829e1cab1/68747470733a2f2f73696d7572756b2d77696b692e73332e61702d6e6f727468656173742d322e616d617a6f6e6177732e636f6d2f746f6f6c2d696e74656c6c696a2d706c7567696e30312e706e67" alt="tool-intellij-plugin01" data-canonical-src="https://simuruk-wiki.s3.ap-northeast-2.amazonaws.com/tool-intellij-plugin01.png" style="max-width:100%;">
+                <ul>
+                    <li>Right-click in project window</li>
+                </ul>
+            </p>
+
+            <hr>
+
+            <p>
+                <img src="https://camo.githubusercontent.com/c408f5ca9a3bac00d4c680d32390a02048e02741/68747470733a2f2f73696d7572756b2d77696b692e73332e61702d6e6f727468656173742d322e616d617a6f6e6177732e636f6d2f746f6f6c2d696e74656c6c696a2d706c7567696e30322e706e67" alt="tool-intellij-plugin02" data-canonical-src="https://simuruk-wiki.s3.ap-northeast-2.amazonaws.com/tool-intellij-plugin02.png" style="max-width:100%;">
+                <ul>
+                    <li>Enter the text</li>
+                </ul>
+            </p>
+
+            <hr>
+
+            <p>
+                <img src="https://camo.githubusercontent.com/223e5848c1243ac3f7f1aa47f52812fa963de19b/68747470733a2f2f73696d7572756b2d77696b692e73332e61702d6e6f727468656173742d322e616d617a6f6e6177732e636f6d2f746f6f6c2d696e74656c6c696a2d706c7567696e30332e706e67" alt="tool-intellij-plugin03" data-canonical-src="https://simuruk-wiki.s3.ap-northeast-2.amazonaws.com/tool-intellij-plugin03.png" style="max-width:100%;">
+                <ul>
+                    <li>Before filtering</li>
+                </ul>
+            </p>
+
+            <hr>
+
+            <p>
+                <img src="https://camo.githubusercontent.com/347e51d4a029a9fb3ff21a6e59571752be638d00/68747470733a2f2f73696d7572756b2d77696b692e73332e61702d6e6f727468656173742d322e616d617a6f6e6177732e636f6d2f746f6f6c2d696e74656c6c696a2d706c7567696e30342e706e67" alt="tool-intellij-plugin04" data-canonical-src="https://simuruk-wiki.s3.ap-northeast-2.amazonaws.com/tool-intellij-plugin04.png" style="max-width:100%;">
+                <ul>
+                    <li>Filtered result</li>
+                </ul>
+            </p>
+        </article>
+    ]]></description>
+
+    <change-notes><![CDATA[
+        <ul>
+            <li>0.0.5</li>
+            <li>Excluded external libraries folder</li>
+        </ul>
+        <ul>
+            <li>0.0.4</li>
+            <li>Added changeNotes</li>
+        </ul>
+        <ul>
+            <li>0.0.3</li>
+            <li>Modified Text area class</li>
+        </ul>
+        <ul>
+            <li>0.0.2</li>
+            <li>Added change-notes</li>
+        </ul>
+        <ul>
+            <li>0.0.1</li>
+            <li>Added filter action</li>
+            <li>Added release filter action</li>
+        </ul>
+    ]]></change-notes>
 
     <extensions defaultExtensionNs="com.intellij">
         <treeStructureProvider implementation="com.yyh.provider.TextOnlyTreeStructureProvider"/>
